# python-architecture

./: Dockerfile  pyproject.toml
adapters/: abstract_repository.py  sql_alchemy.py
config/: __init__.py
domains/: batch.py  model.py  oder_line.py
entrypoints/: flask_app.py
orm/: orm.py
service_layer/: __init__.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: api_test.py
tests/integration/: orm_test.py  repository_test.py  uow_test.py
tests/unit/: model_test.py
